# datathon-grupo-03

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: classification_report_mlp.txt  scaler.pkl
configs/: model_config.yaml  monitoring_config.yaml
data/: raw.dvc
data/golden_set/: golden_set.json
data/policies/: credit_policies.txt
docs/: CONTRIBUTING.md  LGPD_PLAN.md  MODEL_CARD.md  OWASP_MAPPING.md  RED_TEAM_REPORT.md  SYSTEM_CARD.md
evaluation/: README.md  agent_responses.json  benchmark.py  fairness_analysis.py  generate_responses.py  llm_judge.py  ragas_eval.py  shap_report.py
evaluation/results/: benchmark_results.json  fairness_report.json  llm_judge_results.json  ragas_results.json  shap_report.json
models/: mlp_model.pt
monitoring/: grafana-dashboard.json  prometheus.yml
monitoring/grafana/provisioning/dashboards/: default.yaml
notebooks/: 01_eda.ipynb
src/agent/: guardrails.py  llm.py  rag_pipeline.py  react_agent.py  tools.py
src/features/: feature_engineering.py
src/models/: baseline.py  evaluate_mlp.py  inference.py  train.py
src/monitoring/: drift.py  metrics.py
src/serving/: Dockerfile  app.py
src/utils/: config.py
tests/: README.md  conftest.py  stress_test.py  test_agent.py  test_api.py  test_drift.py  test_features.py  test_guardrails.py  test_metrics.py  test_models.py
